# xdata-aiengineer

./: .gitignore  README.md  pyproject.toml
asr/: Dockerfile  asr_api.py  docker-compose.yml  pyproject.toml  requirements.txt
asr/decode/: cv_decode.py
asr/dependencies/: asr.py
asr/lifespan/: asr_api_lifespan.py
elastic-backend/: cv-valid-dev.csv  cv_index.py  docker-compose.yml  pyproject.toml
search-ui/: Dockerfile  docker-compose.yml  index.html  package.json  vite.config.ts
search-ui/server/routes/cv-transcriptions/: [...path].ts
search-ui/src/: App.css  App.tsx  index.css
