[tool.poetry]
name = "xdata-aiengineer"
version = "0.1.0"
description = "assessment for xdata"
authors = ["Joen Tan <joentze01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.135.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
